# hoshi-vc

./: .gitignore  Cargo.toml  README.md  README_JA.md  package.json  pdm.toml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt
.husky/: pre-commit
client/: astro.config.ts  index.html  package.json  tsconfig.json  tsconfig.node.json  unocss.config.ts  vite.config.ts
client/src/: app.tsx  env.d.ts  global.css  main.css  main.tsx  vite-env.d.ts
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
engine/: attempt01.py  attempt01a.py  attempt02.py  attempt03.py  attempt04.py  attempt04a.py  attempt04b.py  attempt04ba.py  attempt04c.py  attempt05.py  attempt05a.py  attempt06.py  attempt06a.py  attempt06aa.py  attempt06ab.py  attempt06ac.py  attempt06ad.py  attempt06b.py  attempt06c.py  attempt06d.py  attempt06e.py  attempt06ea.py  attempt06f.py  attempt07.py  attempt07_check.ipynb  attempt07_dataset.py  attempt07_prepare.py  attempt07_stage1.py  attempt07a.py  attempt07a_prepare.py  attempt08.py  attempt08_dataset.py  attempt08_prepare.py  attempt08a.py  attempt08b.py  attempt08ca.py  attempt08cb.py  attempt08d.py  attempt08e.py  attempt08f.py  (+14 more)
engine/attempts/: a10.py  a10_dataset.py  a10_gradio.py  a10_prepare.py  a11.py  a11a.py  a11a_dataset.py  a11aa.py
engine/fragment_vc/: models.py  utils.py
engine/gradio/: attempt05.py
engine/hifi_gan/: meldataset.py  models.py
engine/lib/: acgan.py  attention.py  club.py  cond_norm.py  dataset_jvs.py  extract.py  (+8 more)
tasks/: README.md
tools/: pdm_export.py  scan_notice.py  task_queue.py
(+34 files in other folders)
