[project]
name = "hoshi-vc"
version = "0.1.0"

requires-python = "~=3.10.11"
dependencies = [
    "autofaiss~=2.15",
    "click~=8.1",
    "faiss-gpu~=1.7",
    "fastdtw~=0.3",
    "gradio>=3.33.1",
    "inaspeechsegmenter~=0.7",
    "librosa~=0.9",
    "lightning~=2.0",
    "matplotlib~=3.7",
    "msgpack-numpy~=0.4",
    "msgpack~=1.0",
    "numpy~=1.23",
    "onnx~=1.14",
    "onnxruntime-gpu~=1.15",
    "optuna~=3.2",
    "phonemizer~=3.2",
    "pysoundfile~=0.9",
    "resampy~=0.4",
    "speechbrain>=0.5.14",
    "speechmetrics[cpu] @ git+https://github.com/aliutkus/speechmetrics",
    "tensorboard>=2.12.3",
    "torch-tb-profiler>=0.4.1",
    "torch>=2.1.0.dev20230606",
    "torchaudio>=2.1.0.dev20230606",
    "torchcrepe~=0.0",
    "tqdm~=4.65",
    "transformers~=4.29",
    "wandb~=0.15",
    "pyworld>=0.3.3",
]

[tool.pdm.dev-dependencies]
dev = [
    "gprof2dot~=2022.7",
    "ipykernel~=6.23",
    "ipywidgets~=8.0",
    "yapf~=0.33",
]

[[tool.pdm.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/nightly/cu118"
verify_ssl = true

[tool.pdm.build]
package-dir = "."

[tool.yapf]
based_on_style = "yapf"
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 1
column_limit = 160
join_multiple_lines = true

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
